# awren-cb-core

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  PALANTIR.md  README.md  ROADMAP.md  STATUS.md  alembic.ini  docker-compose.yml  easypanel.json  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  SUPPORT.md
.github/workflows/: build.yml  docs.yml  lint.yml  test.yml
apps/api/: Dockerfile  main.py  requirements.txt
apps/cli/: __init__.py  main.py
apps/dashboard/: main.py
apps/dashboard/templates/: agent.html  base.html  chat.html  entities.html  entity.html  events.html  graph.html  index.html  relationships.html  settings.html
apps/dashboard/templates/partials/: _agent_result.html  _chat_message.html  _entity_list.html
docs/adr/: ADR-001-Ontology-First-Architecture.md  ADR-002-Graph-Native-Design.md  ADR-003-Event-Sourcing-Strategy.md  ADR-004-Multi-Memory-Architecture.md  ADR-005-Agent-Runtime-Design.md  ADR-006-Domain-Driven-Industry-Brains.md  ADR-007-Why-FastAPI.md  ADR-008-Why-Neo4j.md  ADR-009-Why-Qdrant.md  ADR-010-Modular-Monolith-First.md
docs/onboarding/: developer-guide.md
docs/rfc/: RFC-001-Core-Entity-Model.md  RFC-0010-Knowledge-Graph-Model.md  RFC-002-Ontology-Engine.md  RFC-003-Memory-Engine.md  RFC-004-Reasoning-Engine.md  RFC-005-Agent-Framework.md  RFC-006-Construction-Ontology.md  RFC-007-Company-Brain-Architecture.md  RFC-008-Industry-Brain-Framework.md  RFC-009-Event-Model.md
docs/standards/: architecture-standards.md  branching-strategy.md  coding-standards.md  documentation-standards.md  git-workflow.md  release-process.md  security-standards.md  testing-standards.md
domains/construction/: __init__.py  ontology.py
infrastructure/docker/: docker-compose.yml
infrastructure/neo4j/: init.cypher
infrastructure/postgres/: init.sql
infrastructure/qdrant/: init.json
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial_schema.py
research/papers/: 001-company-brain.md  002-ontology-system.md  003-memory-engine.md  004-reasoning-engine.md  005-agent-runtime.md  006-construction-brain.md  007-industry-brains.md
tests/: conftest.py  test_agents.py  test_api.py  test_cli.py  test_core_models.py  test_embeddings.py  test_event_sourcing.py  test_graph.py  test_llm.py  test_memory_engine.py  test_ontology.py  test_reasoning.py  test_repositories.py  test_vector.py
