[build-system]
requires = ["poetry-core>=1.9"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "awren-core"
version = "0.1.0"
description = "Cognitive Operating System for Company Brains, Industry Brains, and Organizational Intelligence Systems"
authors = ["Awren Labs <labs@awren.ai>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "awren_core", from = "packages/core" },
    { include = "awren_ontology", from = "packages/ontology" },
    { include = "awren_memory", from = "packages/memory" },
    { include = "awren_reasoning", from = "packages/reasoning" },
    { include = "awren_agents", from = "packages/agents" },
    { include = "awren_ingestion", from = "packages/ingestion" },
    { include = "awren_observability", from = "packages/observability" },
    { include = "awren_sdk", from = "packages/sdk" },
    { include = "awren_actions", from = "packages/actions" },
    { include = "awren_agents", from = "packages/agents" },
]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.115.0"
uvicorn = {extras = ["standard"], version = ">=0.32.0"}
pydantic = ">=2.10.0"
pydantic-settings = ">=2.6.0"
sqlalchemy = ">=2.0.36"
alembic = ">=1.14.0"
psycopg = {extras = ["binary"], version = ">=3.2.0"}
neo4j = ">=5.26.0"
qdrant-client = ">=1.13.0"
openai = ">=1.55.0"
httpx = ">=0.28.0"
redis = ">=5.2.0"
opentelemetry-api = ">=1.29.0"
opentelemetry-sdk = ">=1.29.0"
opentelemetry-instrumentation-fastapi = ">=0.49b0"
prometheus-client = ">=0.21.0"
structlog = ">=24.4.0"
rich = ">=13.9.0"
typer = ">=0.15.0"
rdflib = ">=7.1.0"
jinja2 = "^3.1.6"
python-multipart = "^0.0.32"
anthropic = "^0.106.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
celery = "^5.4.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0"
pytest-asyncio = ">=0.24.0"
pytest-cov = ">=6.0.0"
pytest-benchmark = ">=5.1.0"
mypy = ">=1.13.0"
ruff = ">=0.8.0"
pre-commit = ">=4.0.0"
factory-boy = ">=3.3.0"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests that may be skipped",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "C4", "EM", "ERA", "ICN", "PD", "PIE", "PT", "PTH", "RET", "RUF", "S", "SLF", "SLOT", "T10", "TID", "TRY", "YTT"]

[tool.coverage.run]
source = ["packages"]
